--- a/app/index.html
+++ b/app/index.html
@@ -74,8 +74,9 @@
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/utility.js"></script>
+        <script src="scripts/barchart.js"></script>
         <script src="scripts/main.js"></script>
-        <script src="scripts/test.js"></script>
         <!-- endbuild -->
 </body>
 </html>
