--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>interactive</title>
+        <title>Baseball Interactive</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -31,9 +31,7 @@
                 <h3 class="text-muted">Baseball Interactive</h3>
             </div>
 
-            <div class="chart">
-                Hi Jeff!
-            </div>
+            <div class="chart"></div>
 
         </div>
 
