--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,18 @@
                 <h3 class="text-muted">Baseball Interactive</h3>
             </div>
 
-            <div class="chart"></div>
-
+            
+            <div class="charts">
+                <div class="chart homeTeamRuns">
+                    <div class="title">Home Team Runs</div>
+                </div>
+                <div class="chart visitingTeamRuns">
+                    <div class="title">Visiting Team Runs</div>
+                </div>
+                <div class="chart date">
+                    <div class="title">Date</div>
+                </div>
+            </div>
         </div>
 
 
