Working hard... still not very impressive

--- a/app/index.html
+++ b/app/index.html
@@ -33,17 +33,6 @@
             <div class="title">Barcode</div>
             <div class="barcode"></div>
             
-            <div class="charts">
-                <div class="chart homeTeamRuns">
-                    <div class="title">Home Team Runs</div>
-                </div>
-                <div class="chart visitingTeamRuns">
-                    <div class="title">Visiting Team Runs</div>
-                </div>
-                <div class="chart date">
-                    <div class="title">Date</div>
-                </div>
-            </div>
             <div class="totalz">
                 <div id="active"></div>
                 of
@@ -91,6 +80,7 @@
         <script src="bower_components/bootstrap/js/scrollspy.js"></script>
         <script src="bower_components/bootstrap/js/collapse.js"></script>
         <script src="bower_components/bootstrap/js/tab.js"></script>
+        <script src="bower_components/jqueryeventaggregator/eventAggregator.jquery.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
