--- a/app/index.html
+++ b/app/index.html
@@ -34,11 +34,12 @@
             <div class="barcode"></div>
             
             <div class="totalz">
+                <div>Currently showing </div>
                 <div id="active"></div>
-                of
+                <div>of</div>
                 <div class="title" id="total">Total</div>
+                <div> total games.</div>
             </div>
-            <div class="title">List</div>
             <div class="list"></div>
         </div>
 
