Working list of grouped games, list of barcodes

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
             <div id="teamSelect"></div>
             
             <div class="title">Barcode</div>
-            <div class="barcode"></div>
+            <div class="barcodeList"></div>
             
             <div class="totalz">
                 <div>Currently showing </div>
@@ -89,6 +89,7 @@
         <script src="scripts/list.js"></script>
         <script src="scripts/barchart.js"></script>
         <script src="scripts/barcodeChart.js"></script>
+        <script src="scripts/barcodeChartList.js"></script>
         <script src="scripts/allTeamSelect.js"></script>        
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
