Nice looking tick marks"

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,9 @@
             <div id="teamSelect"></div>
             
             <div class="title">Barcode</div>
-            <div class="barcodeList"></div>
+            <div class="tickList">
+                <div class="tick"></div>
+            </div>
             
             <div class="totalz">
                 <div>Currently showing </div>
@@ -90,7 +92,8 @@
         <script src="scripts/barchart.js"></script>
         <script src="scripts/barcodeChart.js"></script>
         <script src="scripts/barcodeChartList.js"></script>
-        <script src="scripts/allTeamSelect.js"></script>        
+        <script src="scripts/tickChart.js"></script>
+        <script src="scripts/allTeamSelect.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
