--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,9 @@
             <div id="teamSelect"></div>
             
             <div class="title">Barcode</div>
-            <div class="tickList">
-                <div class="tick"></div>
+            <div class="tickMarkList">
+                <div class="tickMark"></div>
+                <div class="tickMark"></div>
             </div>
             
             <div class="totalz">
@@ -93,7 +94,9 @@
         <script src="scripts/barcodeChart.js"></script>
         <script src="scripts/barcodeChartList.js"></script>
         <script src="scripts/tickChart.js"></script>
+        <script src="scripts/lineChart.js"></script>
         <script src="scripts/allTeamSelect.js"></script>
+        <script src="scripts/DATA.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
