Added scrollTo dependency

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,9 @@
                 <div class="title" id="total">Total</div>
                 <div> total games.</div>
             </div>
-            <div class="list"></div>
+            <div class="listContainer">
+                <div class="list"></div>
+            </div>
         </div>
 
 
