--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/jquery.scrollTo/jquery.scrollTo.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="bower_components/d3/d3.js"></script>
         <script src="bower_components/crossfilter/crossfilter.js"></script>
