--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,9 @@
             
             <div class="title">Barcode</div>
             <div class="tickMarkList">
-                <div class="tickMark"></div>
+                <div class="tickMark">
+                    <svg class="lineSvgWrapper"><g></g></svg>
+                </div>
                 <div class="tickMark"></div>
             </div>
             
